--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^6.5.2"
+    "mongoose": "^6.5.2",
+    "mongoose-unique-validator": "^3.1.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
